dynamic grovvy filter loader

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -7,3 +7,16 @@ eureka:
   client:
     serviceUrl:
        defaultZone: http://127.0.0.1:8889/eureka/
+
+zuul:
+  routes:
+    gateway-zuul:
+      path: /gw/**
+      serviceId: gateway-zuul
+
+
+
+
+management:
+  security:
+    enabled: false
